harness/soil-test/tests/api/ui/empty_impl_runtime_apis_call.stderr
error: No api implementation given!
  --> tests/api/ui/empty_impl_runtime_apis_call.rs:28:1
   |
28 | subsoil::api::impl_runtime_apis! {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `subsoil::api::impl_runtime_apis` (in Nightly builds, run with -Z macro-backtrace for more info)
